[package]
name = "DateSorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
chrono = "0.4.26"
ctrlc = "3.4.0"
filetime = "0.2.21"
indicatif = "0.17.5"
walkdir = "2.3.3"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwinbase"] }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"

